--- a/PSBR/Views/Extrato/Index.cshtml
+++ b/PSBR/Views/Extrato/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <div class="row">
-    <div class="col-lg-12">
-        <h3>@ViewBag.Title</h3>
-    </div>
+    <div class="col-md-12">
+        <p>@Html.ActionLink("Importar um extrato de Prontuário.", "Importar", "Extrato")</p>
+        <p>@Html.ActionLink("Preencher um extrato de Prontuário.", "Preencher", "Extrato")</p>
+    </div>    
 </div>
