--- a/PSBR/Views/Shared/_Layout.cshtml
+++ b/PSBR/Views/Shared/_Layout.cshtml
@@ -1,133 +1,62 @@
-﻿<!DOCTYPE html>
-
+﻿@using Microsoft.AspNet.Identity
+@using Microsoft.AspNet.Identity.EntityFramework
+@using System.Web.Optimization
+@using PSBR.Models
+<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+    @{
+    //var theme = Bootstrap.Theme.Stock;
+    //if (User.Identity.IsAuthenticated)
+    //{
+    //    var userStore = new UserStore<ApplicationUser>(new ApplicationDbContext());
+    //    var manager = new UserManager<ApplicationUser>(userStore);
+    //    var user = manager.FindById(User.Identity.GetUserId());
+    //    theme = user.CssTheme ?? theme;
+    //}
 
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Bootstrap Core CSS -->
-    <link href="../../Content/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- MetisMenu CSS -->
-    <link href="../../Content/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
-    <!-- Timeline CSS -->
-    <link href="../../Content/dist/css/timeline.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="../../Content/dist/css/sb-admin-2.css" rel="stylesheet">
-    <!-- Morris Charts CSS -->
-    <link href="../../Content/bower_components/morrisjs/morris.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="../../Content/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    }
+    @Styles.Render("~/bundles/theme")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
-    <div id="wrapper">
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+    @RenderSection("topLevel", required: false)
+    @*The structure for the navbar*@
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
+                    @*These get rendered out as the 'expand' button when collapsed*@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("PSBR", "Index", "Home", new { @class = "navbar-brand" })
+                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <!-- /.navbar-header -->
-            <ul class="nav navbar-top-links navbar-right">
-
-                @* Opções de Usuário *@
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        Uiliam Goltz Elesbão
-                        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>                        
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> Perfil do Usuário</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-gear fa-fw"></i> Configurações</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#"><i class="fa fa-sign-out fa-fw"></i> Encerrar sessão</a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-user -->
-                </li>
-                <!-- /.dropdown -->
-            </ul>
-            <!-- /.navbar-top-links -->
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li style="background-color: #EDEDED;">
-                            
-                            <a href="@Url.Action("Index", "Home")"><i class="fa fa-home fa-fw"></i> Início</a>
-                        </li>
-                        <li>
-                            <a href="index.html"><i class="fa fa-bar-chart-o fa-fw"></i> Gráficos</a>
-                        </li>
-                        <li>
-                            <a href="@Url.Action("Index", "Extrato")"><i class="fa fa-hospital-o fa-fw"></i> Extratos</a>
-                        </li>
-                        
-                        <li>
-                            <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Cadastros</a>
-                        </li>                       
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
+            <div class="navbar-collapse collapse">
+                @Html.Partial("_MenuPartial")
+                @Html.Partial("_LoginPartial")
             </div>
-            <!-- /.navbar-static-side -->
-        </nav>
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    @RenderBody()
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            
-            
-            <!-- /.row -->
         </div>
-        <!-- /#page-wrapper -->
+    </div>
+    <div class="container body-content">
+        @{ Html.RenderPartial("_Alerts"); }
+
+        @RenderBody()
+
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - Projeto Saúde Brasil</p>
+        </footer>
     </div>
     
-    <!-- jQuery -->
-    <script src="../../Content/bower_components/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../../Content/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../../Content/bower_components/metisMenu/dist/metisMenu.min.js"></script>
-    <!-- Morris Charts JavaScript -->
-    <script src="../../Content/bower_components/raphael/raphael-min.js"></script>
-    <script src="../../Content/bower_components/morrisjs/morris.min.js"></script>
-    <script src="../../Content/js/morris-data.js"></script>
-    <!-- Custom Theme JavaScript -->
-    <script src="../../Content/dist/js/sb-admin-2.js"></script>
+    @*The Bootstrap JS is loaded here*@
+    @*The JS takes care of some things that can't happen in pure CSS and adds functionality *@
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
