--- a/PSBR/Views/Extrato/Index.cshtml
+++ b/PSBR/Views/Extrato/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<p class="lead">Extratos de Prontuário</p>
+
 <div class="row">
     <div class="col-md-12">
         <p>@Html.ActionLink("Importar um extrato de Prontuário.", "Importar", "Extrato")</p>
