--- a/PSBR/Views/Shared/_MenuPartial.cshtml
+++ b/PSBR/Views/Shared/_MenuPartial.cshtml
@@ -1,14 +1,10 @@
 ﻿@using PSBR.Models
 
-<ul class="nav navbar-nav">
+<ul class="nav navbar-nav" style="margin: 7.5px 7px 7px 7px;">
     <li>@Html.ActionLink("Início", "Index", "Home")</li>
-    <li>@Html.ActionLink("Extratos", "Index", "Extrato")</li>
-    <li>@Html.ActionLink("Consultas", "Index", "Home")</li>
-    <li>@Html.ActionLink("Início", "Index", "Home")</li>
-    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    <li>@Html.ActionLink("My Peeps", "Index", "Simple")</li>
-
+    <li>@Html.ActionLink("Extratos de Prontuário", "Index", "Extrato")</li>
+    <li>@Html.ActionLink("Consultas ao Sistema", "Index", "Home")</li>
+    
     @if (ViewBag.Notifications != null)
     {
         foreach (NotificationViewModel notification in ViewBag.Notifications)
